--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,29 +1,23 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <h1>All Statuses</h1>
+</div>
 
-<h1>Listing Statuses</h1>
+<%= link_to "Post new status", new_status_path %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% @statuses.each do |key| %>
 
-  <tbody>
-    <% @statuses.each do |status| %>
-      <tr>
-        <td><%= status.name %></td>
-        <td><%= status.content %></td>
-        <td><%= link_to 'Show', status %></td>
-        <td><%= link_to 'Edit', edit_status_path(status) %></td>
-        <td><%= link_to 'Destroy', status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="status">
 
-<br>
+        <br/>
 
-<%= link_to 'New Status', new_status_path %>
+    <strong><%=key.name%></strong>
+    <p><%=key.content%></p>
+    <div class="meta"></div>
+    <%= link_to time_ago_in_words(key.created_at), key%> | 
+    <span class="admin">
+      <%= link_to "Edit", edit_status_path(key) %> | 
+      <%= link_to "Delete", key, method: :delete, data: {confirm: "Are you sure?"}%> 
+    </span>
+  </div>
+
+<% end %>
