New user registration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,10 @@
 
 <div class="container">
 	
-	<%= yield %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+	
+  <%= yield %>
 
 </div>
 
