--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,15 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to "All Statuses", statuses_path %></li>
-        
+        <% if user_signed_in? %>
+        <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
+        <li><%= link_to "log_out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to "Register", new_user_registration_path %></li>
+        <li><%= link_to "log_in", new_user_session_path %></li>
+        <% end %>
+
+
       </ul>
       
     </div><!-- /.navbar-collapse -->
